force-app/main/default/objects/Booked_Commission__c/Booked_Commission__c.object-meta.xml
<CustomObject>
    <label>Booked Commission</label>
    <nameField>
        <displayFormat>BKCMN-{0000}</displayFormat>
        <label>Booked Commission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booked Commission</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>