force-app/main/default/objects/Booked_Commission__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission</label>
    <referenceTo>Commission__c</referenceTo>
    <relationshipLabel>Booked Commission</relationshipLabel>
    <relationshipName>Booked_Commission</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>