force-app/main/default/objects/Booked_Commission__c/fields/Commission_Date__c.field-meta.xml
<CustomField>
    <fullName>Commission_Date__c</fullName>
    <label>Commission Date</label>
    <type>Date</type>
</CustomField>