force-app/main/default/objects/Booked_Commission__c/fields/Delivered_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Commission_Amount__c</fullName>
    <formula>Commission__r.Commission_Percentage__c *  Commission__r.Opportunity_Split_Percentage__c *  Total_Delivered_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivered Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>