force-app/main/default/objects/Booked_Commission__c/fields/Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period__c</fullName>
    <formula>Text(Year(Commission_Date__c)) &amp; &quot; - Q&quot; &amp; CASE(Month( Commission_Date__c ), 
1,&quot;1&quot;,
2,&quot;1&quot;,
3,&quot;1&quot;,
4,&quot;2&quot;,
5,&quot;2&quot;,
6,&quot;2&quot;,
7,&quot;3&quot;,
8,&quot;3&quot;,
9,&quot;3&quot;,
10,&quot;4&quot;,
11,&quot;4&quot;,
&quot;4&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Period</label>
    <type>Text</type>
</CustomField>