force-app/main/default/objects/Booked_Commission__c/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <formula>Text(Opportunity__r.ForecastCategoryName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Category</label>
    <type>Text</type>
</CustomField>