force-app/main/default/objects/Booked_Commission__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Booked Commission</relationshipLabel>
    <relationshipName>Booked_Commission</relationshipName>
    <type>Lookup</type>
</CustomField>