force-app/main/default/objects/Booked_Commission__c/fields/Ordered_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Commission_Amount__c</fullName>
    <formula>Commission__r.Commission_Percentage__c * Commission__r.Opportunity_Split_Percentage__c * Total_Ordered_Amount__c * Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordered Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>