force-app/main/default/objects/Booked_Commission__c/fields/Projected_Ordered_Amount__c.field-meta.xml
<CustomField>
    <fullName>Projected_Ordered_Amount__c</fullName>
    <formula>Total_Ordered_Amount__c *  Commission__r.Opportunity_Split_Percentage__c *  Commission__r.Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Ordered Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>