force-app/main/default/objects/Booked_Commission__c/fields/Total_Delivered_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Delivered_Amount__c</fullName>
    <label>Total Delivered Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>